# gowa-sdk-multibot-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  main.rs  shell.nix
automation_core/: client.rs  events.rs  gowa_api.rs  message.rs  redis_pubsub.rs  settings.rs
src/: app.rs  lib.rs  main.rs
src/core/: client.rs  events.rs  gowa_api.rs  mod.rs  redis_pubsub.rs
