[package]
name = "automation_core_worker"
version = "0.1.0"
edition = "2021"
description = "Rust worker bot WhatsApp berbasis GOWA Redis Pub/Sub"

[lib]
name = "automation_core"
path = "src/lib.rs"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
futures-util = "0.3"
redis = { version = "1", features = ["tokio-comp"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
urlencoding = "2"
